# gpt

./: README.md  pyproject.toml
fineTuning/: fine_tuning_classification.py  fine_tuning_classification_by_lora.py  instruction-fine-tuning-test-by-ollama.py  instruction_fine_tuning.py  load_gpt2_from_tensorflow.py  load_gpt2_from_torch.py  model_training_test.py
gpt2/: gpt2.py
tools/: download.py  tools.py
